Add devise token auth and onmiauth-google :fire:
